--- a/Automation/packages.config
+++ b/Automation/packages.config
@@ -14,8 +14,9 @@
   <package id="NBuilder" version="6.0.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net471" />
-  <package id="ReportPortal.Client" version="2.1.0" targetFramework="net471" />
-  <package id="ReportPortal.Log4Net" version="1.2.1" targetFramework="net471" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net471" />
+  <package id="ReportPortal.Client" version="2.1.1" targetFramework="net471" />
+  <package id="ReportPortal.Log4Net" version="1.2.2" targetFramework="net471" />
   <package id="ReportPortal.Shared" version="2.0.6" targetFramework="net471" />
   <package id="ReportPortal.SpecFlow" version="1.4.0" targetFramework="net471" />
   <package id="RestSharp" version="106.5.4" targetFramework="net471" />
@@ -25,6 +26,7 @@
   <package id="SpecFlow" version="2.4.0" targetFramework="net471" />
   <package id="SpecFlow.CustomPlugin" version="2.4.0" targetFramework="net471" />
   <package id="SpecRun.Runner" version="1.8.5" targetFramework="net471" />
+  <package id="SpecRun.SpecFlow" version="1.8.5" targetFramework="net471" />
   <package id="SpecRun.SpecFlow.2-4-0" version="1.8.5" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net471" />
